1999-01-22  Martin Apel <apel@tecmath.de>

	* example/amanda.conf.in: explanation of incronly strategy.
	* man/amanda.8.in: explanation of incronly strategy.
	* server-src/amadmin.c: recognize incronly strategy
	* server-src/conffile.c: read the incronly strategy in the
	configuration file.
	* server-src/conffile.h: definition of DS_INCRONLY
	* server-src/planner.c: Do planning for incronly strategy:
	If the force flag is set perform a full dump, otherwise do
	normal incremental processing but avoid full dumps.
	* server-src/tapefile.c: Bugfix so only tapes which match
	the regular expression for tape labels in the current 
	configuration are considered for writing.

1999-01-22  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* configure.in: require autoconf 2.12.2

	* changer-src/Makefile.am (LDADD): add libamtape, because
	tapefd_rdlabel() is used in scsi-changer-driver.c

	* server-src/planner.c (output_scheduleline): removed `or historical
	data' from `no estimate' message; historical data doesn't matter any 
	more
	Reported by Giorgos Vlachos <Giorgos.Vlachos@eurodyn.com>

1999-01-20  Todd Pfaff  <pfaff@mcmaster.ca>
	
	* client-src/sendbackup-gnutar.c: more Samba 2.0.0 messages

	* client-src/sendbackup-gnutar.c: new Samba 2.0.0 message 

1999-01-19  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amflush.c: use ap_snprintf instead of snprintf.
	* server-src/amflush.c: rotation of new amflush log was broken.

1999-01-17  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/reporter.c: always call output_stats(), the problem is
	that degraded_mode is set if amflush fills the tape.

1999-01-17  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amflush.c: write debuging info to $logdir/amflush
	instead of /dev/null if we run in background.
	* server-src/amcleanup.sh.in: rename $logdir/amflush.

1999-01-11  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amstatus.pl.in: fix a divide by zero error.
